--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gameloft Shop - Detailed Analysis & Solutions</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         :root {
             --bg-body: #0f0f10;
@@ -1197,3 +1198,4 @@
     </script>
 </body>
 </html>
+
