--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gameloft Shop - Detailed Analysis & Solutions</title>
+    <title>Gameloft Shop - Analysis & Solutions</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <style>
         :root {
@@ -1198,4 +1198,5 @@
     </script>
 </body>
 </html>
+
 
