--- a/index.html
+++ b/index.html
@@ -791,8 +791,8 @@
         
         <a href="https://www.figma.com/design/Qz72ZQgABgQAbF7dzNaZWc/ux_audit?node-id=0-1&t=Nh18cEJZhtTo2fZI-1" target="_blank" class="audit-banner">
             <div class="audit-content">
-                <h2>Gameloft & Competitor Analysis</h2>
-                <p>Click here to view the full UX Audit, visual references, and detailed competitor comparison in Figma.</p>
+                <h2>Figma File</h2>
+                <p>Click here to view the full UX Audit, visual references and competitor analysis in Figma.</p>
             </div>
             <div class="audit-logo">
                 Open in
@@ -1198,5 +1198,6 @@
     </script>
 </body>
 </html>
+
 
 
