--- a/index.html
+++ b/index.html
@@ -897,12 +897,12 @@
             <div class="content-card">
                 <h3>Profile Redesign (Single-Page Experience)</h3>
                 <ul>
-                    <li><strong>Improve account structure:</strong> place all information on one page with vertical scrolling, but keep anchor navigation for subsections for convenience.</li>
+                    <li><strong>Improve Account Page structure:</strong> place all information on one page with vertical scrolling, but keep anchor navigation for subsections for convenience.</li>
                 </ul>
 
-                <h3>Competitive Advantage (Inventory Sync)</h3>
+                <h3>Competitive Advantage (Soft Registration Model)</h3>
                 <ul>
-                    <li>Ensure a <strong>mechanic where, when a user buys an item and then joins the game (even if not yet registered)</strong>, they immediately receive items in their inventory. This is an advantage over competitors (<a href="https://store.zynga.com/" target="_blank" class="ref-link">Zynga</a>, <a href="https://www.scopely.com/" target="_blank" class="ref-link">Scopely</a>, <a href="https://store.fcm.ea.com/en-gb/easports-fcmobile" target="_blank" class="ref-link">EA</a>, <a href="https://store.supercell.com/" target="_blank" class="ref-link">Supercell</a>).</li>
+                    <li>Adopt a <strong>Soft Registration strategy</strong> to capture impulse purchases, allowing users to secure their inventory post-payment through an automated, email-anchored account creation process. Instead of blocking the checkout with forms, this approach creates a retrieval point using the user's email, guaranteeing that purchased items are safe and accessible for future account activation. This is an advantage over competitors (<a href="https://store.zynga.com/" target="_blank" class="ref-link">Zynga</a>, <a href="https://www.scopely.com/" target="_blank" class="ref-link">Scopely</a>, <a href="https://store.fcm.ea.com/en-gb/easports-fcmobile" target="_blank" class="ref-link">EA</a>, <a href="https://store.supercell.com/" target="_blank" class="ref-link">Supercell</a>).</li>
                 </ul>
 
                 <h3>Improved Integration (QR)</h3>
@@ -1010,7 +1010,7 @@
                 
                 <div class="highlight-box">
                     <ul>
-                        <li><strong>Implementation:</strong> Introduce Single Sign-On (SSO) options to allow one-click registration via Google and Apple accounts.</li>
+                        <li><strong>Implementation:</strong> Introduce Single Sign-On (SSO) options to allow one-click registration via Google and Apple accounts. Another approach (if techincally possible) called <strong>Cross-Device Authentication</strong>, allowing users to instantly sign in on the web store using the mobile game client as a secure key. This replicates the frictionless experience found in <a href="https://store.steampowered.com/" target="_blank" class="ref-link">Steam</a> and <a href="https://www.empiresandpuzzles.com/" target="_blank" class="ref-link">Empires and Puzzles</a>, leveraging the player's active game session for fast and familiar access.</li>
                         <li><strong>Why it works:</strong> This eliminates the need for manual form filling and password creation, drastically reducing the time-to-value for new users.</li>
                         <li><strong>Reference:</strong> This seamless entry point is best implemented by <a href="https://store.fcm.ea.com/en-gb/easports-fcmobile" target="_blank" class="ref-link">EA Sports FC Web Store</a>, where account creation is integrated effortlessly into the login flow.</li>
                     </ul>
@@ -1238,3 +1238,4 @@
     </script>
 </body>
 </html>
+
