--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
 
                 <h3>Improved Integration (QR)</h3>
                 <ul>
-                    <li><strong>Implement game account linking to the online store via QR code</strong> (as in <a href="https://www.empiresandpuzzles.com/" target="_blank" class="ref-link">Empires and Puzzles</a> from <a href="https://store.zynga.com/" target="_blank" class="ref-link">Zynga Games</a>), ensuring simultaneous integration of both mobile and desktop versions of the site.</li>
+                    <li><strong>Implement game account linking to the online store via QR code</strong> (as in <a href="https://store.steampowered.com/" target="_blank" class="ref-link">Steam</a> and <a href="https://www.empiresandpuzzles.com/" target="_blank" class="ref-link">Empires and Puzzles</a> from <a href="https://store.zynga.com/" target="_blank" class="ref-link">Zynga Games</a>), ensuring simultaneous integration of both mobile and desktop versions of the site.</li>
                 </ul>
 
                 <h3>Functional Implementations</h3>
@@ -1010,9 +1010,9 @@
                 
                 <div class="highlight-box">
                     <ul>
-                        <li><strong>Implementation:</strong> Introduce Single Sign-On (SSO) options to allow one-click registration via Google and Apple accounts. Another approach (if techincally possible) called <strong>Cross-Device Authentication</strong>, allowing users to instantly sign in on the web store using the mobile game client as a secure key. This replicates the frictionless experience found in <a href="https://store.steampowered.com/" target="_blank" class="ref-link">Steam</a> and <a href="https://www.empiresandpuzzles.com/" target="_blank" class="ref-link">Empires and Puzzles</a>, leveraging the player's active game session for fast and familiar access.</li>
+                        <li><strong>Implementation:</strong> Introduce Single Sign-On (SSO) options to allow one-click registration via Google and Apple accounts. Another approach (if techincally possible) called <strong>Cross-Device Authentication</strong>, allowing users to instantly sign in on the web store using the mobile game client as a secure key. This replicates the frictionless experience, leveraging the player's active game session for fast and familiar access.</li>
                         <li><strong>Why it works:</strong> This eliminates the need for manual form filling and password creation, drastically reducing the time-to-value for new users.</li>
-                        <li><strong>Reference:</strong> This seamless entry point is best implemented by <a href="https://store.fcm.ea.com/en-gb/easports-fcmobile" target="_blank" class="ref-link">EA Sports FC Web Store</a>, where account creation is integrated effortlessly into the login flow.</li>
+                        <li><strong>Reference:</strong> This seamless entry point is best implemented by <a href="https://store.fcm.ea.com/en-gb/easports-fcmobile" target="_blank" class="ref-link">EA Sports FC Web Store</a>, <a href="https://store.steampowered.com/" target="_blank" class="ref-link">Steam</a> and <a href="https://www.empiresandpuzzles.com/" target="_blank" class="ref-link">Empires and Puzzles</a>, where account creation/integration is integrated effortlessly into the login flow (via Google/Apple account or QR code).</li>
                     </ul>
                 </div>
             </div>
@@ -1238,4 +1238,5 @@
     </script>
 </body>
 </html>
+
 
