--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
                     <ul>
                         <li><strong>Implementation:</strong> Introduce Single Sign-On (SSO) options to allow one-click registration via Google and Apple accounts. Another approach (if techincally possible) called <strong>Cross-Device Authentication</strong>, allowing users to instantly sign in on the web store using the mobile game client as a secure key. This replicates the frictionless experience, leveraging the player's active game session for fast and familiar access.</li>
                         <li><strong>Why it works:</strong> This eliminates the need for manual form filling and password creation, drastically reducing the time-to-value for new users.</li>
-                        <li><strong>Reference:</strong> This seamless entry point is best implemented by <a href="https://store.fcm.ea.com/en-gb/easports-fcmobile" target="_blank" class="ref-link">EA Sports FC Web Store</a>, <a href="https://store.steampowered.com/" target="_blank" class="ref-link">Steam</a> and <a href="https://www.empiresandpuzzles.com/" target="_blank" class="ref-link">Empires and Puzzles</a>, where account creation/integration is integrated effortlessly into the login flow (via Google/Apple account or QR code).</li>
+                        <li><strong>Reference:</strong> This seamless entry point is best implemented by <a href="https://store.fcm.ea.com/en-gb/easports-fcmobile" target="_blank" class="ref-link">EA Sports FC Web Store</a>, <a href="https://store.steampowered.com/" target="_blank" class="ref-link">Steam</a> and <a href="https://www.empiresandpuzzles.com/" target="_blank" class="ref-link">Empires and Puzzles</a>, where account creation/authentication is integrated effortlessly into the login flow (via Google/Apple account or QR code).</li>
                     </ul>
                 </div>
             </div>
@@ -1238,5 +1238,6 @@
     </script>
 </body>
 </html>
+
 
 
